# NSU-os

./: .gitignore  README.md
sem2/http-cache-proxy/: CMakeLists.txt  Dockerfile  cache.c  cache.h  docker-compose.yml  greedy_io.c  greedy_io.h  io.c  io.h  main.c  proxy.c  proxy.h  proxy_config.h
sem2/http-proxy-no-cache/: CMakeLists.txt  Makefile  http_proxy  main.c  proxy.h
sem2/sync-2-4/: CMakeLists.txt  main.c  mutex.c  mutex.h  spinlock.c  spinlock.h
sem2/sync-task2-3/: CMakeLists.txt
sync-task2-3/: main.c
